<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="1" android:background="#ffffff" android:layout_width="-1" android:layout_height="-1">
    <RelativeLayout android:layout_gravity="1" android:background="@drawable/odometer" android:layout_width="172dp" android:layout_height="176dp" android:layout_marginTop="0dp" />
    <RelativeLayout android:layout_gravity="1" android:background="#ffffff" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="0dp">
        <TextView android:textSize="40dp" android:textColor="#000000" android:gravity="11" android:id="@id/fec_label" android:layout_width="-1" android:layout_height="-2" />
    </RelativeLayout>
    <RelativeLayout android:layout_gravity="1" android:background="#ffffff" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="0dp">
        <LinearLayout android:orientation="1" android:background="#ffffff" android:layout_width="-1" android:layout_height="-1"
            <LinearLayout android:orientation="0" android:background="#ffffff" android:layout_width="-1" android:layout_height="-2"
                <LinearLayout android:orientation="1" android:background="#ffffff" android:layout_width="200dp" android:layout_height="-2">
                    <TextView android:textSize="17dp" android:textColor="#000000" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="5dp" android:text="@string/odometer_label" />
                    <EditText android:id="@id/odometer" android:layout_width="-1" android:layout_height="-2" android:hint="@string/odometer_hint" android:singleLine="true" android:maxLength="10" android:numeric="5" />
                    <TextView android:textSize="17dp" android:textColor="#000000" android:layout_width="-1" android:layout_height="-2" android:text="@string/fuel_label" />
                    <EditText android:id="@id/fuel" android:layout_width="-1" android:layout_height="-2" android:hint="@string/fuel_hint" android:singleLine="true" android:maxLength="10" android:numeric="5" />
                </LinearLayout>
                <LinearLayout android:orientation="1" android:background="#ffffff" android:layout_width="-1" android:layout_height="-2"
                    <LinearLayout android:orientation="1" android:background="#ffffff" android:layout_width="-1" android:layout_height="70dp">
                        <RadioGroup android:orientation="1" android:layout_width="-1" android:layout_height="-2">
                            <RadioButton android:textColor="#000000" android:id="@id/mile_radio" android:layout_width="-1" android:layout_height="35dp" android:text="@string/mile_radio_label" />
                            <RadioButton android:textColor="#000000" android:id="@id/kilometer_radio" android:layout_width="-1" android:layout_height="35dp" android:text="@string/kilometer_radio_label" />
                        </RadioGroup>
                    </LinearLayout>
                    <LinearLayout android:orientation="1" android:background="#ffffff" android:layout_width="-1" android:layout_height="70dp" android:layout_marginTop="5dp">
                        <RadioGroup android:orientation="1" android:layout_width="-1" android:layout_height="-2">
                            <RadioButton android:textColor="#000000" android:id="@id/gallon_radio" android:layout_width="-1" android:layout_height="35dp" android:text="@string/gallon_radio_label" />
                            <RadioButton android:textColor="#000000" android:id="@id/liter_radio" android:layout_width="-1" android:layout_height="35dp" android:text="@string/liter_radio_label" />
                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <Button android:textSize="20dp" android:textColor="#000000" android:gravity="11" android:id="@id/update_button" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="5dp" android:text="@string/update_button_text" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
